# sharded-tee-network

./: .gitignore  .gitmodules  Cargo.toml  Makefile.toml  README.md  foundry.toml
evm-simulation/: foundry.toml
evm-simulation/broadcast/multi/CrossChainSwap.s.sol-1744152702/: run.json
evm-simulation/broadcast/multi/CrossChainSwap.s.sol-1744152989/: run.json
evm-simulation/broadcast/multi/CrossChainSwap.s.sol-1744153128/: run.json
evm-simulation/broadcast/multi/CrossChainSwap.s.sol-1744156793/: run.json
evm-simulation/broadcast/multi/CrossChainSwap.s.sol-1744158076/: run.json
evm-simulation/broadcast/multi/CrossChainSwap.s.sol-1744160857/: run.json
evm-simulation/script/: CrossChainSwap.s.sol
evm-simulation/src/: DummyERC20.sol  TEEescrow.sol
evm-simulation/test/: TEEescrow.t.sol
experiments/: Cargo.toml
experiments/src/: main.rs
scripts/: Deploy.sol  parse_crash_fault.py  parse_cross_chain_metrics.py  parse_metrics.py  parse_metrics_scenario_c.py  parse_multi_chain_metrics.py  parse_scalability_metrics.py  parse_tee_overhead.py
scripts/rust/: Cargo.toml  run_shard_scaling.rs
teeshard-protocol/: Cargo.toml
teeshard-protocol/src/: config.rs  data_structures.rs  lib.rs  shard_manager.rs  test_utils.rs
teeshard-protocol/src/cross_chain/: mod.rs  swap_coordinator.rs  types.rs
teeshard-protocol/src/liveness/: aggregator.rs  challenger.rs  mod.rs  types.rs
teeshard-protocol/src/network/: mod.rs
teeshard-protocol/src/onchain/: chain_simulator.rs  escrow_contract.rs  evm_relayer.rs  interface.rs  mod.rs
teeshard-protocol/src/raft/: messages.rs  mod.rs  node.rs  state.rs  storage.rs
teeshard-protocol/src/simulation/: config.rs  coordinator.rs  metrics.rs  mocks.rs  mod.rs  network.rs  node.rs  runtime.rs
teeshard-protocol/src/tee_logic/: crypto_sim.rs  enclave_sim.rs  lock_proofs.rs  mod.rs  threshold_sig.rs  types.rs
teeshard-protocol/tests/: e2e_swap_test.rs  full_protocol_e2e_test.rs  mod.rs  scenario_a_shard_scalability.rs  scenario_b_cross_chain_ratio.rs  scenario_c_tee_overhead.rs  scenario_d_network_delay.rs  scenario_e_crash_faults.rs  scenario_f_single_vs_multi_chain.rs  simulation_tests.rs
(+95 files in other folders)
