[package]
name = "teeshard-protocol"
version = "0.1.0"
edition = "2021"

[lib]
name = "teeshard_protocol"

[dependencies]
rand = "0.8"
chrono = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
ed25519-dalek = { version = "2.1", features = ["rand_core"] }

[dev-dependencies] 