[package]
name = "teeshard-protocol"
version = "0.1.0"
edition = "2021"

[lib]
name = "teeshard_protocol"

[dependencies]
rand = "0.8"
chrono = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
ed25519-dalek = { version = "2.1.1", features = ["rand_core"] }
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"
hex = "0.4"
regex = "1"
futures = "0.3.31"
bincode = "2.0.1"
ethers = { version = "2.0", features = ["abigen", "rustls", "ws"] }

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
serde_json = "1.0"
hex = "0.4"
rand = "0.8"
async-trait = "0.1"
ethers = { version = "2.0", features = ["abigen", "rustls", "ws"] }
# ethers = { version = "2.0", features = ["abigen", "rustls", "ws"] } # Example features 