[package]
name = "teeshard-protocol"
version = "0.1.0"
edition = "2021"

[lib]
name = "teeshard_protocol"

[dependencies]
rand = "0.8"
chrono = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
ed25519-dalek = { version = "2.1.1", features = ["serde","rand_core"] }
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"
hex = "0.4"
regex = "1.10.4"
futures = "0.3.31"
bincode = "2.0.0-rc.3"
ethers = { version = "2.0", features = ["abigen", "rustls", "ws"] }
serde_bytes = "0.11"
log = "0.4"
thiserror = "1.0"
blake3 = "1.5.0"

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
serde_json = "1.0"
hex = "0.4"
rand = "0.8"
async-trait = "0.1"
ethers = { version = "2.0", features = ["abigen", "rustls", "ws"] }
# ethers = { version = "2.0", features = ["abigen", "rustls", "ws"] } # Example features 